# AP2_demo_app

./: .env.example  .gitignore  AP2_COMPLIANCE_REPORT.md  AP2_V2_STEP1-10_IMPLEMENTATION_REPORT.md  CLAUDE.md  CRYPTO_TEST_COVERAGE_SUMMARY.md  README.md  ap2_crypto.py  ap2_demo_app.py  ap2_types.py  ap2_verifier.py  credential_provider.py  demo_log.txt  docker-compose.yml  memo.md  merchant.py  merchant_agent.py  payment_processor.py  pyproject.toml  pytest.ini  receipt_generator.py  requirements.txt  risk_assessment.py  secure_merchant_agent.py  secure_shopping_agent.py  shopping_agent.py  test_ap2_integration.py  test_ap2_types.py  test_security_fixes.py  transaction_store.py  verifier_registry.py  webauthn_component.py
common/: auth.py  (+13 more)
v2/: .env.example  .gitignore  AI_AGENT_INTEGRATION.md  AP2_COMPLIANCE_FIX_GUIDE.md  AP2_COMPLIANCE_REPORT.md  AP2_COMPLIANCE_REPORT_ADDENDUM.md  AP2_COMPREHENSIVE_COMPLIANCE_AUDIT_2025-10-20.md  MERCHANT_AGENT_AI_DESIGN.md  README.md  SECURITY_FIXES_REPORT.md  TYPE_DEFINITION_FIX_INSTRUCTION.md  docker-compose.yml  langgraph.md  pyproject.toml
v2/common/: a2a_handler.py  auth.py  base_agent.py  crypto.py  database.py  did_resolver.py  jwt_utils.py  logger.py  mandate_types.py  mcp_client.py  mcp_server.py  merchant_registry.py  models.py  nonce_manager.py  payment_types.py  receipt_generator.py  redis_client.py  risk_assessment.py  search_engine.py  seed_data.py  telemetry.py  user_authorization.py
v2/docs/: AP2_COMPLIANCE_VERIFICATION.md  AUTH_GUIDE.md  DISTRIBUTED_TRACING.md  LANGGRAPH_SHOPPING_FLOW_DESIGN.md  LANGGRAPH_SHOPPING_FLOW_INTEGRATION.md  PASSKEY_AUTH_GUIDE.md
v2/frontend/: .env.example  PAYMENT_REGISTRATION_TEST.md  README.md  next.config.mjs  package-lock.json  package.json
v2/frontend/app/: page.tsx
v2/frontend/app/chat/: page.tsx
v2/frontend/app/merchant/: page.tsx
v2/frontend/components/cart/: CartCard.tsx  CartCarousel.tsx  CartDetailsModal.tsx
v2/frontend/components/chat/: ChatInput.tsx  ChatMessage.tsx  SignaturePromptModal.tsx
v2/frontend/components/payment/: PaymentMethodList.tsx
v2/frontend/components/product/: ProductCard.tsx  ProductCarousel.tsx
v2/frontend/hooks/: useSSEChat.ts
v2/frontend/lib/: webauthn.ts
v2/scripts/: README.md  clean_all_data.sh  init_db.py  init_keys.py  init_seeds.py
v2/services/credential_provider/: Dockerfile  README.md  main.py  provider.py
v2/services/merchant/: Dockerfile  README.md  main.py  service.py
v2/services/merchant_agent/: Dockerfile  README.md  agent.py  langgraph_merchant.py  main.py
v2/services/merchant_agent_mcp/: Dockerfile  README.md  __init__.py  main.py
v2/services/payment_network/: Dockerfile  README.md  main.py  network.py
v2/services/payment_processor/: Dockerfile  README.md  main.py  processor.py
v2/services/shopping_agent/: Dockerfile  README.md  agent.py  agent.py.bak  langgraph_agent.py  langgraph_conversation.py  langgraph_shopping.py  langgraph_shopping_flow.py  main.py  mcp_tools.py
v2/services/shopping_agent_mcp/: Dockerfile  README.md  main.py
(+204 files in other folders)
