[project]
name = "ap2-demo-v2"
version = "2.0.0"
description = "AP2 Protocol Demo Application v2 - Microservices Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1.0",
    # Database
    "sqlalchemy>=2.0.35",
    "aiosqlite>=0.20.0",
    # Cryptography (reuse existing ap2_crypto.py)
    "cryptography>=43.0.0",
    "fido2>=1.1.3",
    "cbor2>=5.6.0",
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # HTTP Client
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    # Utilities
    "python-dotenv>=1.0.1",
    "reportlab>=4.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "services"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
